# solana-stablecoin-standard

./: .dockerignore  .env.docker  .env.docker.example  .gitignore  API.md  ARCHITECTURE.md  Anchor.toml  COMPLIANCE.md  Cargo.toml  Dockerfile  OPERATIONS.md  README.md  SDK.md  SSS Backend.session.sql  SSS-1.md  SSS-2.md  docker-compose.yml  package.json  tsconfig.json
backend/: BACKEND_FLOW.md
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  dto.rs  error.rs  lib.rs  main.rs  routes.rs  services.rs  signer.rs  workers.rs
backend/crates/api/tests/: api_integration.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 0001_backend_schema.sql  0002_schema_revamp.sql
backend/crates/db/src/: lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/indexer/: Cargo.toml
backend/crates/indexer/src/: config.rs  decode.rs  lib.rs  main.rs  payload.rs  pipeline.rs  service.rs
backend/crates/indexer/tests/: projections.rs
backend/crates/stablecoin_client/: Cargo.toml
backend/crates/stablecoin_client/src/: lib.rs
backend/crates/stablecoin_decoder/: Cargo.toml
backend/crates/stablecoin_decoder/src/: compatibility.rs  lib.rs
backend/crates/stablecoin_decoder/src/accounts/: blacklist_entry.rs  minter_quota.rs  mod.rs  role_config.rs  stablecoin_config.rs
backend/crates/stablecoin_decoder/src/events/: account_frozen.rs  account_thawed.rs  address_blacklisted.rs  address_unblacklisted.rs  authority_transferred.rs  minter_updated.rs  mod.rs  pause_changed.rs  roles_updated.rs  stablecoin_initialized.rs  tokens_burned.rs  tokens_minted.rs  tokens_seized.rs
backend/crates/stablecoin_decoder/src/instructions/: add_to_blacklist.rs  burn.rs  cpi_event.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  remove_from_blacklist.rs  seize.rs  thaw_account.rs  transfer_authority.rs  unpause.rs  update_minter.rs  update_roles.rs
backend/crates/stablecoin_decoder/src/types/: account_frozen.rs  account_thawed.rs  address_blacklisted.rs  address_unblacklisted.rs  authority_transferred.rs  initialize_params.rs  minter_updated.rs  mod.rs  pause_changed.rs  roles_updated.rs  stablecoin_initialized.rs  tokens_burned.rs  tokens_minted.rs  tokens_seized.rs  update_minter_params.rs  update_roles_params.rs
crates/sss-admin-cli/: Cargo.toml
crates/sss-admin-cli/src/: backend.rs  chain.rs  cli.rs  config.rs  init.rs  lib.rs  main.rs
crates/sss-admin-cli/tests/: cli_integration.rs  devnet_backend.rs
docs/: sdk-generation.md  workspace-bootstrap.md
docs/plans/: 2026-03-12-devnet-integration-tests-design.md  2026-03-12-devnet-integration-tests.md  2026-03-13-admin-cli-design.md  2026-03-13-admin-cli-implementation.md  2026-03-14-cli-admin-flows-design.md  2026-03-14-cli-admin-flows.md
modules/: README.md
modules/sss-common/: Cargo.toml
modules/sss-common/src/: lib.rs  seeds.rs  validation.rs
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: errors.rs  events.rs  lib.rs
programs/stablecoin/src/instructions/: burn.rs  compliance.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs
programs/stablecoin/src/state/: blacklist.rs  config.rs  minter_quota.rs  mod.rs  roles.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: build.sh  check.sh  cli-e2e.sh  deploy-devnet.sh  devnet-api-smoke.sh  devnet-e2e.sh  generate-sdks.mjs  patch-generated.mjs
sdk/cli/: package.json  tsconfig.json  tsconfig.tsbuildinfo
sdk/cli/src/: cli.ts  index.ts
sdk/client/: package.json  tsconfig.json  tsconfig.tsbuildinfo
sdk/client/src/: client.ts  compliance.ts  constants.ts  index.ts  pdas.ts  presets.ts  stablecoin.ts  transaction.ts  types.ts
sdk/generated-kit/: package.json  tsconfig.tsbuildinfo
sdk/generated-kit/src/: index.ts
sdk/generated-kit/src/stablecoin/accounts/: blacklistEntry.ts  index.ts  minterQuota.ts  roleConfig.ts  stablecoinConfig.ts
sdk/generated-kit/src/stablecoin/errors/: index.ts  stablecoin.ts
sdk/generated-kit/src/stablecoin/instructions/: addToBlacklist.ts  burn.ts  freezeAccount.ts  index.ts  initialize.ts  mint.ts  pause.ts  removeFromBlacklist.ts  seize.ts  thawAccount.ts  transferAuthority.ts  unpause.ts  updateMinter.ts  updateRoles.ts
sdk/generated-kit/src/stablecoin/programs/: stablecoin.ts
sdk/generated-kit/src/stablecoin/types/: accountFrozen.ts  accountThawed.ts  addressBlacklisted.ts  addressUnblacklisted.ts  authorityTransferred.ts  index.ts  minterUpdated.ts  pauseChanged.ts  rolesUpdated.ts  stablecoinInitialized.ts  tokensBurned.ts  tokensMinted.ts  tokensSeized.ts
sdk/generated-kit/src/transfer-hook/errors/: index.ts  transferHook.ts
sdk/generated-kit/src/transfer-hook/instructions/: initializeExtraAccountMetaList.ts  transferHook.ts
sdk/generated-kit/src/transfer-hook/programs/: transferHook.ts
sdk/generated-web3js/: package.json  tsconfig.tsbuildinfo
sdk/generated-web3js/src/: index.ts
sdk/generated-web3js/src/stablecoin/: index.ts
sdk/generated-web3js/src/stablecoin/accounts/: blacklistEntry.ts  minterQuota.ts  roleConfig.ts  stablecoinConfig.ts
sdk/generated-web3js/src/stablecoin/instructions/: addToBlacklist.ts  burn.ts  freezeAccount.ts  initialize.ts  mint.ts  pause.ts  removeFromBlacklist.ts  seize.ts  thawAccount.ts  (+4 more)
sdk/generated-web3js/src/transfer-hook/: index.ts
tests/: README.md
tests/devnet/: config.ts  create-e2e-credentials.ts  mocha.setup.ts  preset-config.spec.ts  sdk.spec.ts  sss1.spec.ts  sss2.spec.ts  stress.spec.ts  tsconfig.json
tests/devnet/fixtures/: e2e-authority.json  e2e-credentials.json  program-ids.json
tests/devnet/helpers/: assertions.ts  cluster.ts  pdas.ts  presets.ts  transactions.ts  wallet.ts
tests/litesvm/: Cargo.toml
tests/litesvm/src/: common.rs
tests/litesvm/tests/: blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  minter.rs  pause.rs  roles.rs  seize.rs  transfer_hook.rs
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  invariants.rs  state_model.rs  test_fuzz.rs  types.rs
(+21 files in other folders)
