[workspace]
members = [
  "backend/crates/api",
  "backend/crates/db",
  "backend/crates/domain",
  "backend/crates/indexer",
  "programs/stablecoin",
  "programs/transfer-hook",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/pratikbuilds/solana-stablecoin-standard"

[workspace.dependencies]
anchor-lang = "0.32.1"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[profile.release]
overflow-checks = true
