[workspace]
members = [
  "backend/crates/api",
  "backend/crates/db",
  "backend/crates/domain",
  "backend/crates/indexer",
  "modules/sss-common",
  "programs/stablecoin",
  "programs/transfer-hook",
  "tests/litesvm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/pratikbuilds/solana-stablecoin-standard"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anyhow = "1.0.98"
litesvm = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-sdk = "2.2.0"
spl-associated-token-account = "6.0.0"
spl-tlv-account-resolution = "0.10.0"
spl-token-2022 = "8.0.1"
spl-transfer-hook-interface = "0.10.0"
thiserror = "2.0.12"

[profile.release]
overflow-checks = true

[patch.crates-io]
solana-account-info = { path = "vendor/solana-account-info" }
