[package]
name = "stablecoin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "stablecoin"

[features]
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token_2022"] }
spl-token-2022.workspace = true
spl-token-metadata-interface = "0.7"
spl-transfer-hook-interface.workspace = true
sss-common = { path = "../../modules/sss-common" }
transfer-hook = { path = "../transfer-hook", features = ["cpi"] }
