[package]
name = "transfer-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang.workspace = true
