[package]
name = "transfer-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true, features = ["interface-instructions"] }
anchor-spl = { workspace = true, features = ["token_2022"] }
spl-tlv-account-resolution.workspace = true
spl-transfer-hook-interface.workspace = true
sss-common = { path = "../../modules/sss-common" }
