[package]
name = "stablecoin-client"
description = "Codama-generated Rust client for the stablecoin program"

  [package.version]
  workspace = true

  [package.edition]
  workspace = true

  [package.license]
  workspace = true

  [package.repository]
  workspace = true

[lib]
path = "src/lib.rs"

[features]
default = [ ]
fetch = [ "dep:solana-client" ]
anchor = [ "dep:anchor-lang" ]
anchor-idl-build = [ "anchor" ]

[dependencies]
borsh = "^1.0"
solana-account = "~3.0"
solana-account-info = "~3.1"
solana-instruction = "~3.2"
solana-program-error = "~3.0"
solana-cpi = "~3.1"
num-derive = "^0.4"
num-traits = "^0.2"
thiserror = "^1.0"

  [dependencies.solana-address]
  features = [ "borsh", "copy", "curve25519", "decode" ]
  version = "~2.2"

  [dependencies.solana-client]
  optional = true
  version = "^3.0"

  [dependencies.anchor-lang]
  optional = true
  version = "~0.31"

