[package]
name = "carbon-stablecoin-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []

serde = ["dep:serde", "dep:serde-big-array"]

[dependencies]
carbon-core = { version = "0.9.1", features = ["macros"], default-features = false }
borsh = { version = "1.5.1", features = ["derive"] }
solana-pubkey = { version = "2.2.1", features = ["borsh"] }
solana-account = "2.2.1"
solana-instruction = { version = "2.2.1", default-features = false }
serde_json = "1.0.140"

serde = { version = "1.0.219", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
